Working example with Gran lift and Sjourn. Hardcoded

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,46 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gran {
+  position: absolute;
+  top: 67px;
+  left: 946px;
+  z-index: 2;
+  opacity: .3;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sjourn {
+  position: absolute;
+  top: 47px;
+  left: 928px;
+  z-index: 2;
+  opacity: .3;
 }
 
-.App-link {
-  color: #61dafb;
+.test {
+  z-index: 3;
+  position: absolute;
+  top: 67px;
+  left: 946px;
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* 
+.gran:hover {
+  opacity: 1;
+} */
+
+/* .sjourn:hover {
+  opacity: 1;
+} */
+
+.open {
+  opacity: 1;
 }
