--- a/src/App.css
+++ b/src/App.css
@@ -458,3 +458,28 @@
 .notOpen {
   opacity: .3;
 }
+
+.parent-element {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.parent-element p {
+  max-width: 100%;
+  height: auto;
+  flex-shrink: 0;
+
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+}
