--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import-normalize;
+/* bring in normalize.css styles */
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
