--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  /* text-align: center; */
-}
-
 .image {
   position: absolute;
   top: 10px;
@@ -482,4 +478,50 @@
 body {
   height: 100vh;
   width: 100%;
+}
+
+.map-container {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+}
+
+.logs {
+  box-sizing: border-box;
+  /* border-left: 5px solid black; */
+  /* border-right: 5px solid black; */
+
+}
+
+.creekHeader {
+  margin-bottom: 2rem;
+}
+
+.resort-title {
+  font-size: 2.5rem;
+  font-weight: 800;
+  margin-top: 2rem;
+  /* text-align: center; */
+  text-transform: uppercase;
+  color: #4575ae;
+  text-transform: uppercase;
+}
+
+.App {
+  /* background-color: #d6efff; */
+  background-color: #e0f3ff;
+  background-image: url("https://www.transparenttextures.com/patterns/binding-light.png");
+  min-height: 100vh;
+  /* font-family: 'RationalExtraBold', sans-serif; */
+
+  display: flex;
+  justify-content: center;
+
+}
+
+html {
+  overflow-y: overlay;
 }
