--- a/src/App.css
+++ b/src/App.css
@@ -525,3 +525,24 @@ body {
 html {
   overflow-y: overlay;
 }
+
+ul {
+  list-style-position: inside;
+}
+
+.rectangle-popup {
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  background-color: #8aa5c5;
+  z-index: 10000;
+  overflow-y: scroll;
+  max-height: 50vh;
+  border-radius: 5px;
+}
+
+.feature {
+  max-width: 100%;
+  max-height: 80%;
+}
